protein evolution examples

--- a/notebooks/examples/Log-Likelihood-Ratios.ipynb
+++ b/notebooks/examples/Log-Likelihood-Ratios.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project module version: 0.0.post1.dev2+gce3ecbe\n",
+      "Project module version: 0.0.post1.dev18+g803595c.d20240131\n",
       "PyTorch version:        2.1.2+cu121\n"
      ]
     }
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "078a397fab0c4f5bb4085e4d201c7fc4",
+       "model_id": "b4bf63297e3548c384c8d775653ee543",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "165c948a3b694fcc8e18eb961a30532a",
+       "model_id": "88cbb51e74584096be41de7e363af7d6",
        "version_major": 2,
        "version_minor": 0
       },
