--- a/notebooks/examples/Log-Likelihood-Ratios.ipynb
+++ b/notebooks/examples/Log-Likelihood-Ratios.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project module version: 0.0.post1.dev18+g803595c.d20240131\n",
+      "Project module version: 0.0.post1.dev20+g3ea2516\n",
       "PyTorch version:        2.1.2+cu121\n"
      ]
     }
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4bf63297e3548c384c8d775653ee543",
+       "model_id": "c3ad348e4ade4e68b4cfaa4c4576b92d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88cbb51e74584096be41de7e363af7d6",
+       "model_id": "0daf34f20d694858881f03db58316851",
        "version_major": 2,
        "version_minor": 0
       },
