Predict effects of mutations on protein function

--- a/notebooks/examples/Log-Likelihood-Ratios.ipynb
+++ b/notebooks/examples/Log-Likelihood-Ratios.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "a6139512-2a52-4791-b19d-c96ccfc15a4a",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project module version: 0.0.post1.dev20+g3ea2516\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Project module version: 0.0.post1.dev23+gc9ac203\n",
       "PyTorch version:        2.1.2+cu121\n"
      ]
     }
@@ -68,13 +70,41 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import esm\n",
+    "from esm.evoprotgrad import torch_device\n",
     "print(f'Project module version: {esm.__version__}')\n",
     "print(f'PyTorch version:        {torch.__version__}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "id": "0c298ce6-3f6a-45c8-b1a6-2d88ba3f9919",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'device_id': 0,\n",
+       " 'device': device(type='cuda', index=0),\n",
+       " 'device_name': 'NVIDIA GeForce RTX 3070 Laptop GPU',\n",
+       " 'cudnn_version': 8902,\n",
+       " 'torch_version': '2.1.2+cu121'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Get the device for the model\n",
+    "device_dict = torch_device()\n",
+    "display(device_dict)\n",
+    "torch.set_float32_matmul_precision(precision='high')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6622cbee-caa3-4b7c-8a77-4c49e0819d2e",
    "metadata": {},
    "outputs": [],
@@ -152,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a4be8564-c0e4-4cc0-b6c0-424972eae07f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3ad348e4ade4e68b4cfaa4c4576b92d",
+       "model_id": "6527beee3f9c47a0a9cdb83ee099b1a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0daf34f20d694858881f03db58316851",
+       "model_id": "07bb30db2208486aa115b902fc581b08",
        "version_major": 2,
        "version_minor": 0
       },
