--- a/notebooks/examples/Log-Likelihood-Ratios.ipynb
+++ b/notebooks/examples/Log-Likelihood-Ratios.ipynb
@@ -17,9 +17,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a6139512-2a52-4791-b19d-c96ccfc15a4a",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Project module version: 0.0.post1.dev23+gc9ac203\n",
+      "PyTorch version:        2.1.2+cu121\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -49,27 +73,80 @@
     "from esm.evoprotgrad import torch_device\n",
     "print(f'Project module version: {esm.__version__}')\n",
     "print(f'PyTorch version:        {torch.__version__}')"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "0c298ce6-3f6a-45c8-b1a6-2d88ba3f9919",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'device_id': 0,\n",
+       " 'device': device(type='cuda', index=0),\n",
+       " 'device_name': 'NVIDIA A100-SXM4-80GB',\n",
+       " 'cudnn_version': 8906,\n",
+       " 'torch_version': '2.1.2+cu121'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat May 18 15:31:18 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 535.129.03             Driver Version: 535.129.03   CUDA Version: 12.2     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA A100-SXM4-80GB          On  | 00000000:CD:00.0 Off |                    0 |\n",
+      "| N/A   26C    P0              71W / 500W |   4771MiB / 81920MiB |      0%      Default |\n",
+      "|                                         |                      |             Disabled |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A     60877      C   ...s/ccb/projects/esm/.venv/bin/python     4758MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the device for the model\n",
     "device_dict = torch_device()\n",
     "display(device_dict)\n",
-    "torch.set_float32_matmul_precision(precision='high')"
-   ],
-   "outputs": []
+    "torch.set_float32_matmul_precision(precision='high')\n",
+    "!nvidia-smi\n",
+    "\n",
+    "# Model names\n",
+    "# https://huggingface.co/facebook/esm2_t33_650M_UR50D\n",
+    "esm_checkpoints = {\n",
+    "    't48_15B': 'facebook/esm2_t48_15B_UR50D',\n",
+    "    't36_3B': 'facebook/esm2_t36_3B_UR50D',\n",
+    "    't33_650M': 'facebook/esm2_t33_650M_UR50D',\n",
+    "    't30_150M': 'facebook/esm2_t30_150M_UR50D',\n",
+    "    't12_35M': 'facebook/esm2_t12_35M_UR50D',\n",
+    "    't6/8M': 'facebook/esm2_t6_8M_UR50D',\n",
+    "    'default': 'facebook/esm2_t30_150M_UR50D'\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6622cbee-caa3-4b7c-8a77-4c49e0819d2e",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def interactive_heatmap(protein_sequence):\n",
     "    # Define interactive widgets\n",
@@ -140,20 +217,48 @@
     "    plt.title(\"Predicted Effects of Mutations on Protein Sequence (LLR)\")\n",
     "    plt.colorbar(label=\"Log Likelihood Ratio (LLR)\")\n",
     "    plt.show()"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a4be8564-c0e4-4cc0-b6c0-424972eae07f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d941c2f61f094a61ad985adf96a93b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntSlider(value=1, description='Start:', max=108, min=1), IntSlider(value=108, description='End…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ede113140f542cd9aeb42dd23a02dde",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Example usage:\n",
     "protein_sequence = \"MAPLRKTYVLKLYVAGNTPNSVRALKTLNNILEKEFKGVYALKVIDVLKNPQLAEEDKILATPTLAKVLPPPVRRIIGDLSNREKVLIGLDLLYEEIGDQAEDDLGLE\"\n",
     "interactive_heatmap(protein_sequence)"
-   ],
-   "outputs": []
+   ]
   }
  ],
  "metadata": {
