--- a/notebooks/examples/Log-Likelihood-Ratios.ipynb
+++ b/notebooks/examples/Log-Likelihood-Ratios.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a6139512-2a52-4791-b19d-c96ccfc15a4a",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Project module version: 0.0.post1.dev23+gc9ac203\n",
       "PyTorch version:        2.1.2+cu121\n"
      ]
@@ -46,8 +44,10 @@
    ],
    "source": [
     "import os\n",
+    "import gc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "import ipywidgets as widgets\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
@@ -70,15 +70,23 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import esm\n",
-    "from esm.evoprotgrad import torch_device\n",
+    "from esm.evoprotgrad import torch_device, set_expert\n",
     "print(f'Project module version: {esm.__version__}')\n",
     "print(f'PyTorch version:        {torch.__version__}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e8ea863-87ed-4be7-bb59-9aa478e02efc",
+   "metadata": {},
+   "source": [
+    "### Set the GPU device ###"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0c298ce6-3f6a-45c8-b1a6-2d88ba3f9919",
+   "execution_count": 3,
+   "id": "a2a70175-5f47-4ba3-88fc-b9ac7aa213ed",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat May 18 15:31:18 2024       \n",
+      "cuda:0\n",
+      "Mon May 20 10:33:40 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.129.03             Driver Version: 535.129.03   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -106,8 +115,8 @@
       "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
-      "|   0  NVIDIA A100-SXM4-80GB          On  | 00000000:CD:00.0 Off |                    0 |\n",
-      "| N/A   26C    P0              71W / 500W |   4771MiB / 81920MiB |      0%      Default |\n",
+      "|   0  NVIDIA A100-SXM4-80GB          On  | 00000000:DD:00.0 Off |                    0 |\n",
+      "| N/A   26C    P0              67W / 500W |      7MiB / 81920MiB |      0%      Default |\n",
       "|                                         |                      |             Disabled |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -116,19 +125,30 @@
       "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
       "|        ID   ID                                                             Usage      |\n",
       "|=======================================================================================|\n",
-      "|    0   N/A  N/A     60877      C   ...s/ccb/projects/esm/.venv/bin/python     4758MiB |\n",
+      "|  No running processes found                                                           |\n",
       "+---------------------------------------------------------------------------------------+\n"
      ]
     }
    ],
    "source": [
+    "# Where do we want to put the model weights.\n",
+    "project_dir = os.path.normpath('/n/data1/hms/ccb/projects/esm')\n",
+    "cache_dir = os.path.join(project_dir, 'model_weights')\n",
+    "Path(cache_dir).mkdir(exist_ok=True, parents=True)\n",
+    "\n",
     "# Get the device for the model\n",
     "device_dict = torch_device()\n",
     "display(device_dict)\n",
     "torch.set_float32_matmul_precision(precision='high')\n",
-    "!nvidia-smi\n",
     "\n",
-    "# Model names\n",
+    "# Now, get the device name\n",
+    "device = device_dict.get('device')\n",
+    "print(device)\n",
+    "\n",
+    "# Free up GPU memory\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
     "# https://huggingface.co/facebook/esm2_t33_650M_UR50D\n",
     "esm_checkpoints = {\n",
     "    't48_15B': 'facebook/esm2_t48_15B_UR50D',\n",
@@ -138,17 +158,19 @@
     "    't12_35M': 'facebook/esm2_t12_35M_UR50D',\n",
     "    't6/8M': 'facebook/esm2_t6_8M_UR50D',\n",
     "    'default': 'facebook/esm2_t30_150M_UR50D'\n",
-    "}"
+    "}\n",
+    "\n",
+    "!nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6622cbee-caa3-4b7c-8a77-4c49e0819d2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interactive_heatmap(protein_sequence):\n",
+    "def interactive_heatmap(protein_sequence, expert=None):\n",
     "    # Define interactive widgets\n",
     "    start_slider = widgets.IntSlider(value=1, min=1, max=len(protein_sequence), step=1, description='Start:')\n",
     "    end_slider = widgets.IntSlider(value=len(protein_sequence), min=1, max=len(protein_sequence), step=1, description='End:')\n",
@@ -157,23 +179,29 @@
     "\n",
     "    def update_heatmap(start, end):\n",
     "        if start <= end:\n",
-    "            generate_heatmap(protein_sequence, start, end)\n",
+    "            generate_heatmap(protein_sequence, start, end, expert=expert)\n",
     "\n",
     "    out = widgets.interactive_output(update_heatmap, {'start': start_slider, 'end': end_slider})\n",
     "\n",
     "    # Display the interactive widgets\n",
     "    display(ui, out)\n",
     "\n",
-    "def generate_heatmap(protein_sequence, start_pos=1, end_pos=None):\n",
+    "def generate_heatmap(protein_sequence, start_pos=1, end_pos=None, expert=None):\n",
+    "    \n",
     "    # Load the model and tokenizer\n",
-    "    model_name = \"facebook/esm2_t6_8M_UR50D\"\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "    model = EsmForMaskedLM.from_pretrained(model_name)\n",
+    "    if expert is None:\n",
+    "        # Load the model and tokenizer\n",
+    "        model_name = \"facebook/esm2_t6_8M_UR50D\"\n",
+    "        tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "        model = EsmForMaskedLM.from_pretrained(model_name)\n",
+    "    else:\n",
+    "        tokenizer = expert.tokenizer\n",
+    "        model = expert.model\n",
     "\n",
     "    # Tokenize the input sequence\n",
-    "    input_ids = tokenizer.encode(protein_sequence, return_tensors=\"pt\")\n",
+    "    input_ids = tokenizer.encode(protein_sequence, return_tensors=\"pt\").to(device)\n",
     "    sequence_length = input_ids.shape[1] - 2  # Excluding the special tokens\n",
-    "\n",
+    "    \n",
     "    # Adjust end position if not specified\n",
     "    if end_pos is None:\n",
     "        end_pos = sequence_length\n",
@@ -221,14 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a4be8564-c0e4-4cc0-b6c0-424972eae07f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model and weights for t6/8M model. This can take a while.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d941c2f61f094a61ad985adf96a93b33",
+       "model_id": "383f3e13ca154f1f9be3a7ca555e9fc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ede113140f542cd9aeb42dd23a02dde",
+       "model_id": "de4b203af10e454ea8797f97e86fe00d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +292,15 @@
    "source": [
     "# Example usage:\n",
     "protein_sequence = \"MAPLRKTYVLKLYVAGNTPNSVRALKTLNNILEKEFKGVYALKVIDVLKNPQLAEEDKILATPTLAKVLPPPVRRIIGDLSNREKVLIGLDLLYEEIGDQAEDDLGLE\"\n",
-    "interactive_heatmap(protein_sequence)"
+    "\n",
+    "# Load the model\n",
+    "# checkpoint = 't36_3B'\n",
+    "checkpoint = 't6/8M'\n",
+    "print(f'Loading model and weights for {checkpoint} model. This can take a while.')\n",
+    "expert = set_expert(checkpoint=checkpoint, device=device, cache_dir=cache_dir)\n",
+    "\n",
+    "# Create the scoring heatmap\n",
+    "interactive_heatmap(protein_sequence, expert=expert)"
    ]
   }
  ],
